--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django==2.2.1
-django-crispy-forms==1.7.2
-django-star-ratings==0.8.0
-Pillow==6.1.0
-psycopg2==2.8.3
+Django=2.2.1
+django-crispy-forms=1.7.2
+django-star-ratings=0.8.0
+Pillow=6.1.0
+psycopg2=2.8.3
